--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -3,11 +3,9 @@
 Security reminder: MediaWiki does not require PHP's register_globals
 setting since version 1.2.0. If you have it on, turn it '''off''' if you can.
 
-== MediaWiki 1.17.0 ==
+== MediaWiki 1.17.1 ==
 
-2011-06-22
-
-This is the first stable release of the MediaWiki 1.17 branch.
+This a maintenance release of the MediaWiki 1.17 branch.
 
 === Summary of selected changes in 1.17 ===
 
@@ -35,6 +33,12 @@ Selected changes since MediaWiki 1.16 that may be of interest:
 
 * The lowest supported version of PHP is now 5.2.3. If necessary, please
   upgrade PHP prior to upgrading MediaWiki.
+
+=== Changes since 1.17.0 ===
+
+* (bug 29535) Added missing Creative Commons CC0 icon.
+* (bug 29726) Fixed failure to load internationalization messages in 
+  client-side scripts on WebKit-based browsers.
 
 === Changes since 1.17.0rc1 ===
 
