--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -39,6 +39,8 @@ Selected changes since MediaWiki 1.16 that may be of interest:
 * (bug 29535) Added missing Creative Commons CC0 icon.
 * (bug 29726) Fixed failure to load internationalization messages in 
   client-side scripts on WebKit-based browsers.
+* Fixed a bug in message transformation where the previous language could leak 
+  into later transformations in the UI language.
 
 === Changes since 1.17.0rc1 ===
 
