MFT r90217 plus release notes
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/branches/REL1_17/phase3@91527 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -41,6 +41,7 @@ Selected changes since MediaWiki 1.16 that may be of interest:
   client-side scripts on WebKit-based browsers.
 * Fixed a bug in message transformation where the previous language could leak 
   into later transformations in the UI language.
+* (bug 29091) Fix form of native name for Ossetic language (Иронау -> Ирон)
 
 === Changes since 1.17.0rc1 ===
 
