--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -46,6 +46,8 @@ Selected changes since MediaWiki 1.16 that may be of interest:
   work at all since 1.17 beta 1.
 * (bug 29531) Fixed img_auth.php for thumbnails and other filenames with 
   multiple dots, was broken by the fix for bug 28840.
+* In the maintenance script purgeList.php, fixed a fatal error when a page 
+  title is given, instead of a URL.
 
 === Changes since 1.17.0rc1 ===
 
