--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -62,6 +62,10 @@ Selected changes since MediaWiki 1.16 that may be of interest:
   redirect.
 * (bug 29408) Fixed uploads of files with MIME types that aren't detected by 
   MediaWiki.
+* Removed DEFAULT '' NOT NULL field definitions from Oracle DB schema because 
+  using the DEFAULT value ('') in DML broke Oracle backend as it treats an 
+  empty VARCHAR2 value as NULL. Indexes on Oracle do not require NOT NULL
+  fields.
 
 === Changes since 1.17 beta 1 ===
 
