--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -48,6 +48,7 @@ Selected changes since MediaWiki 1.16 that may be of interest:
   multiple dots, was broken by the fix for bug 28840.
 * In the maintenance script purgeList.php, fixed a fatal error when a page 
   title is given, instead of a URL.
+ * (bug 19514) Unordered list list-style-image should be IE6-compatible (8-bit)
 
 === Changes since 1.17.0rc1 ===
 
