--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -50,6 +50,8 @@ Selected changes since MediaWiki 1.16 that may be of interest:
   title is given, instead of a URL.
 * (bug 19514) Unordered list list-style-image should be IE6-compatible (8-bit).
 * Installer checked for magic_quotes_runtime instead of register_globals.
+* $wgSVGMaxSize is now applied to the smaller of width or height, making very
+  wide pano/timeline/diagram SVGs renderable at saner sizes
 
 === Changes since 1.17.0rc1 ===
 
