MFT to REL1_17 r97151 (bug 30907) Special:Unusedcategories should sort ascendingly (A-Z not Z-A).
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/branches/REL1_17/phase3@97197 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -61,6 +61,7 @@ Selected changes since MediaWiki 1.16 that may be of interest:
   instead require() for included extensions.
 * (bug 26486) ResourceLoader modules with paths to nonexistent files cause PHP
   warnings/notices to be thrown
+* (bug 30907) Special:Unusedcategories should sort ascendingly.
 
 === Changes since 1.17.0rc1 ===
 
